Implement api logout
